src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Reference_Status__c</fullName>
        <description>Can Marketing contact/use this account for PR or other marketing purposes</description>
        <inlineHelpText>Whether the account can be used as a reference by marketing or sales.</inlineHelpText>
        <label>Reference Status</label>
        <picklist>
            <picklistValues>
                <fullName>Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unavailable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referenceable__c</fullName>
        <label>Referenceable</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LatAm</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Regional_Alliance_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional Alliance Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_Approval__c</fullName>
        <label>Requested Approval</label>
        <picklist>
            <picklistValues>
                <fullName>New Customer - Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Customer – Indirect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Customer - Channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Customer – Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Customer - Acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Customer - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid POC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Potential Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PartnerConnect - Solution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PartnerConnect - Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner - Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SBQQ__AssetQuantitiesCombined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option to combine quantities of multiple assets for the same product into one line when renewal quote is generated.</description>
        <inlineHelpText>Option to combine quantities of multiple assets for the same product into one line when renewal quote is generated.</inlineHelpText>
        <label>Combine Asset Quantities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CoTermedContractsCombined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that controls whether assets and subscriptions from multiple co-teremed contracts are rolled up together. By default, each co-termed contract generates a separate group on renewal quote.</description>
        <inlineHelpText>Enable to combine assets and subscriptions from multiple co-termed contracts. By default, each co-termed contract generates a separate group on renewal quote.</inlineHelpText>
        <label>Combine Co-Termed Contracts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CoTerminationEvent__c</fullName>
        <description>Determines when contracts are co-terminated.</description>
        <inlineHelpText>Determines when contracts are co-terminated.</inlineHelpText>
        <label>Co-Termination Event</label>
        <picklist>
            <controllingField>SBQQ__ContractCoTermination__c</controllingField>
            <picklistValues>
                <fullName>Add-on</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SBQQ__ContractCoTermination__c</fullName>
        <description>Determines how service and subscription contracts for this customer are co-terminated.</description>
        <inlineHelpText>Determines how service and subscription contracts for this customer are co-terminated.</inlineHelpText>
        <label>Contract Co-Termination</label>
        <picklist>
            <picklistValues>
                <fullName>Never</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Always</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prompt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Default opportunity for this account used by an e-Commerce module to obtain the customer&apos;s price book and associate with &quot;shopping cart&quot; quotes.</description>
        <inlineHelpText>Default opportunity for this account used by an e-Commerce module to obtain the customer&apos;s price book and associate with &quot;shopping cart&quot; quotes.</inlineHelpText>
        <label>Default Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>WebAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__IgnoreParentContractedPrices__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select if contracted prices should not be inherited from the parent account.</description>
        <inlineHelpText>Select if contracted prices should not be inherited from the parent account.</inlineHelpText>
        <label>Ignore Parent Contracted Prices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__PreserveBundle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select to maintain bundle hierarchy on renewal quotes and amendments</description>
        <inlineHelpText>Select checkbox to maintain bundle hierarchy on renewal quotes and amendments.</inlineHelpText>
        <label>Preserve Bundle Structure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__PriceHoldEnd__c</fullName>
        <description>End date for any price hold that may be in effect.</description>
        <inlineHelpText>Enter date until which the prices must be held.</inlineHelpText>
        <label>Price Hold End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalModel__c</fullName>
        <description>The option to distinguish between Subscription or Asset based renewal.</description>
        <inlineHelpText>Choose Asset Based to make renewals based off of an account&apos;s Assets or choose Subscription based to makes renewals based off of subscriptions created from a quote.</inlineHelpText>
        <label>Renewal Model</label>
        <picklist>
            <picklistValues>
                <fullName>Asset Based</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Based</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalPricingMethod__c</fullName>
        <description>Method for pricing products on renewal.</description>
        <inlineHelpText>Use &quot;Same&quot; to keep the same price paid last time. Use &quot;List&quot; to use current list price. Use &quot;Uplift&quot; to use the price paid last time plus some uplift.</inlineHelpText>
        <label>Renewal Pricing Method</label>
        <picklist>
            <picklistValues>
                <fullName>Same</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uplift</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFDC2_Imported_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Definitive identifier used to determine if the record was imported from SFDC2</description>
        <label>SFDC2 Imported Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SOW_Date_Expires__c</fullName>
        <label>SOW Date Expires</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SOW_Date_Signed__c</fullName>
        <label>SOW Date Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <label>Sales Rep</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_LOB__c</fullName>
        <label>Second LOB</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_State__c</fullName>
        <label>Second_State</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Reference_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Reference Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Id</field>
                <operation>equals</operation>
                <valueField>Contact.Account.Id</valueField>
            </filterItems>
            <filterItems>
                <field>Contact.RecordType.Name</field>
                <operation>equals</operation>
                <value>Business Contact</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Secondary Reference Contact)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Segmentation__c</fullName>
        <label>Segmentation-test</label>
        <picklist>
            <picklistValues>
                <fullName>Bill review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modeling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Services_Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Services Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ServicesAccountManager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Services_Account_Mgr__c</fullName>
        <inlineHelpText>Primary account manager from services</inlineHelpText>
        <label>Services Account Mgr</label>
        <picklist>
            <picklistValues>
                <fullName>Aaron Howell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alex Naddaff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alistair Kinnear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ant Swindells</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ashutosh Koparkar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barrett Brooks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brian LaReau</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brian Moore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chet Patel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colin Parker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dan Wang</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>David Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ed Porter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ed Wells</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hank Sutherland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ian Cogswell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jay Coulson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jay Lurgio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JC Gangaiah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeff Sontheimer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joe Scinto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>John Babcock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>John Krekis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Josh Hooks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joshua Pereira</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Justin Hall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kevin Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lorraine Coulson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mark Clark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mark Rouse</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Solution_Description__c</fullName>
        <inlineHelpText>Please give us a complete solution description</inlineHelpText>
        <label>Solution Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Specialty_LOB__c</fullName>
        <label>Specialty LOB</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Region__c</fullName>
        <label>Sub Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Comments__c</fullName>
        <inlineHelpText>For other information about current systems.</inlineHelpText>
        <label>DELETE System Comments</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Target_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Target Account (Intl only)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Third_LOB__c</fullName>
        <label>Third LOB</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_State__c</fullName>
        <label>Third State</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_Aggregate_Organization__c</fullName>
        <formula>IF((OverallDWP__c*1000000)&gt;0 &amp;&amp; (OverallDWP__c*1000000)&lt;100000000, &apos;Tier 5: DWP &lt; $100M&apos;, 
IF((OverallDWP__c*1000000)&gt;=100000000 &amp;&amp; (OverallDWP__c*1000000)&lt;300000000, &apos;Tier 4 : $300M &gt; DWP &gt;= $100M&apos;, 
IF((OverallDWP__c*1000000)&gt;=300000000 &amp;&amp; (OverallDWP__c*1000000)&lt;1000000000,&apos;Tier 3 : $1B &gt; DWP &gt;= $300M&apos;, 
IF((OverallDWP__c*1000000)&gt;=1000000000 &amp;&amp; (OverallDWP__c*1000000)&lt;5000000000,&apos;Tier 2 : $5B &gt; DWP &gt;= $1B&apos;, 
IF((OverallDWP__c*1000000)&gt;=5000000000, &apos;Tier 1 : DWP &gt;= $5B&apos;,
&apos;Not Set&apos;)
)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tier Aggregate Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <picklist>
            <picklistValues>
                <fullName>Select</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advantage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premier</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_References_Fulfilled__c</fullName>
        <label>Total Requests Fulfilled since 8/1/16</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_References_Requested__c</fullName>
        <label>Total Number of References Requested</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Value_of_Won_Opps__c</fullName>
        <label>Total Value of Won Opps</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Value_of_Won_Opps_derived__c</fullName>
        <label>Total Value of Won Opportunities (USD)</label>
        <summarizedField>Opportunity.Amount_USD__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Trac_dedupe__c</fullName>
        <label>Trac_dedupe</label>
        <picklist>
            <picklistValues>
                <fullName>MASTER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORRECTED MASTER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MERGE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Training_Agreement_Date_Expires__c</fullName>
        <label>Training Agreement Date Expires</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Agreement_Date_Signed__c</fullName>
        <label>Training Agreement Date Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type_of_Reference_Accepted__c</fullName>
        <label>Reference Type(s) Accepted</label>
        <picklist>
            <picklistValues>
                <fullName>Phone Call / WebEx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onsite Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analysts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (User Groups, etc.)</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Ultimate_Parent_Account__c</fullName>
        <formula>IF(NOT(ISBLANK(Parent.Parent.Parent.Parent.Parent.Name)), Parent.Parent.Parent.Parent.Parent.Name,
IF(NOT(ISBLANK(Parent.Parent.Parent.Parent.Name)), Parent.Parent.Parent.Parent.Name,
IF(NOT(ISBLANK(Parent.Parent.Parent.Name)), Parent.Parent.Parent.Name,
IF(NOT(ISBLANK(Parent.Parent.Name)), Parent.Parent.Name,
IF(NOT(ISBLANK(Parent.Name)),Parent.Name,
Name)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ultimate Parent Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vertical_Market_Segment_ID__c</fullName>
        <label>Vertical Market Segment ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Win_Percentage__c</fullName>
        <formula>IF( Number_of_Opportunities__c &gt; 0,  Number_of_won_opps__c  /  Number_of_Opportunities__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Win Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Year_Founded__c</fullName>
        <label>Year Founded</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__CustomField1__c</fullName>
        <label>Custom Field 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__CustomField2__c</fullName>
        <label>Custom Field 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__E_AccountGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Group</label>
        <referenceTo>ccrz__E_AccountGroup__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__PreventAddrBookSave__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, users cannot save new addresses to the address book.</description>
        <label>Prevent Address Book Saves</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__PreventNewAddrCheckout__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, the user should not be able to add new addresses during checkout</description>
        <label>Prevent New Addresses at Checkout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__PreventNewBillAddrCO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, the user should not be able to add new billing addresses during checkout</description>
        <label>Prevent New Checkout Billing Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__SourceSystem__c</fullName>
        <label>Source System</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__TaxExemptAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is the field to indicate whether an account is tax exempt.</description>
        <inlineHelpText>This is the field to indicate whether an account is tax exempt.</inlineHelpText>
        <label>TaxExemptAccount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__UsedByCloudcraze__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Used by Cloudcraze Customer Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__ExemptionCertificate__c</fullName>
        <description>Tax exemption certificate for the account. We recommend that you use the tax exemption features of Avalara. Use this field only when you are not required to collect tax for the account and your finance team tracks and verifies tax exemption certificates manually.</description>
        <inlineHelpText>Tax exemption certificate for the account. Enter a value if you are not required to collect tax for the account and your finance team tracks and verifies tax exemption certificates manually.</inlineHelpText>
        <label>Exemption Certificate</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__IsBillingAddressValidated__c</fullName>
        <description>Indicates whether the billing address has been validated against the addresses in the external tax calculation service.</description>
        <formula>NOT
            ( ISBLANK(BillingStreet) &amp;&amp;
              ISBLANK(BillingCity) &amp;&amp; 
              ISBLANK(BillingState) &amp;&amp;
              ISBLANK(BillingPostalCode) &amp;&amp;
              ISBLANK(BillingCountry) 
            ) &amp;&amp; 
            ( BillingStreet  =  fferpcore__ValidatedBillingStreet__c ) &amp;&amp;
            ( BillingCity =  fferpcore__ValidatedBillingCity__c ) &amp;&amp;
            ( BillingState =  fferpcore__ValidatedBillingState__c ) &amp;&amp;  
            ( BillingPostalCode =  fferpcore__ValidatedBillingPostalCode__c ) &amp;&amp;
            ( BillingCountry =  fferpcore__ValidatedBillingCountry__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates whether the billing address has been validated against the addresses in the external tax calculation service.</inlineHelpText>
        <label>Billing Address Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__IsShippingAddressValidated__c</fullName>
        <description>Indicates whether the shipping address has been validated against the addresses in the external tax calculation service.</description>
        <formula>NOT
            ( ISBLANK(ShippingStreet) &amp;&amp;
              ISBLANK(ShippingCity) &amp;&amp; 
              ISBLANK(ShippingState) &amp;&amp;
              ISBLANK(ShippingPostalCode) &amp;&amp;
              ISBLANK(ShippingCountry) 
            ) &amp;&amp; 
            ( ShippingStreet  =  fferpcore__ValidatedShippingStreet__c ) &amp;&amp;
            ( ShippingCity =  fferpcore__ValidatedShippingCity__c ) &amp;&amp;
            ( ShippingState =  fferpcore__ValidatedShippingState__c ) &amp;&amp;  
            ( ShippingPostalCode =  fferpcore__ValidatedShippingPostalCode__c ) &amp;&amp;
            ( ShippingCountry =  fferpcore__ValidatedShippingCountry__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates whether the shipping address has been validated against the addresses in the external tax calculation service.</inlineHelpText>
        <label>Shipping Address Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedBillingCity__c</fullName>
        <label>Validated Billing City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedBillingCountry__c</fullName>
        <label>Validated Billing Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedBillingPostalCode__c</fullName>
        <label>Validated Billing Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedBillingState__c</fullName>
        <label>Validated Billing State/Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedBillingStreet__c</fullName>
        <label>Validated Billing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedShippingCity__c</fullName>
        <label>Validated Shipping City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedShippingCountry__c</fullName>
        <label>Validated Shipping Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedShippingPostalCode__c</fullName>
        <label>Validated Shipping Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedShippingState__c</fullName>
        <label>Validated Shipping State/Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedShippingStreet__c</fullName>
        <label>Validated Shipping Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mh_Additional_Note_Exist__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SAM Integration</description>
        <label>Additional Note Exist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mh_Additional_Notes_Exist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional Notes Exist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mh_Associated_Gold_Sheet__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SAM Integration</description>
        <label>Associated Gold Sheet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mh_Charter_Statement__c</fullName>
        <description>SAM Integration</description>
        <label>Charter Statement</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mh_Critical_Vulnerability__c</fullName>
        <description>SAM Integration</description>
        <label>Critical Vulnerability</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mh_FOP_Last_Yr__c</fullName>
        <description>SAM Integration</description>
        <label>FOP Last Yr</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mh_FOP_Opportunities__c</fullName>
        <description>SAM Integration</description>
        <label>FOP Opportunities</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mh_FOP_Trends__c</fullName>
        <description>SAM Integration</description>
        <label>FOP Trends</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mh_FOP_View_1_Yr__c</fullName>
        <description>SAM Integration</description>
        <label>FOP View 1 Yr</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mh_FOP_View_3_Yr__c</fullName>
        <description>SAM Integration</description>
        <label>FOP View 3 Yr</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mh_FOP_View_Now__c</fullName>
        <description>SAM Integration</description>
        <label>FOP View Now</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mh_Goals__c</fullName>
        <description>SAM Integration</description>
        <label>Goals</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mh_Gold_Sheet_Created_Date__c</fullName>
        <label>Gold Sheet Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>mh_Last_Updated_Gold_Sheet__c</fullName>
        <description>SAM Integration</description>
        <label>Last Updated Gold Sheet</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mh_Manager_Notes_Exist__c</fullName>
        <label>Managers Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mh_Manager_Review_Date__c</fullName>
        <label>Manager Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>mh_Managers_Notes_Exist__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SAM Integration</description>
        <label>Managers Notes Exist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mh_Managers_Review_Date__c</fullName>
        <description>SAM Integration</description>
        <label>Managers Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>mh_Our_View_1_Yr__c</fullName>
        <description>SAM Integration</description>
        <label>Our View 1 Yr</label>
        <length>10</length>
        <type>Text</type>
    </fields>
</CustomObject>